# seqmaster

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
CodonCount/: condo_count.cpp  condo_count.h  parser.cpp
CodonCount/include/: condo_count.h
ContigDiff/: cent_percent.cpp  contig_diff.cpp  contig_diff.h  other_percent.cpp  parser.cpp  search_algo.cpp  search_algo.h
ContigDiff/include/: cent_percent.h  contig_diff.h  other_percent.h  parser.h
FindAll/: find_all.cpp  find_all.h  parser.cpp
FindAll/include/: find_all.h  parser.h
Foundation/: Directory.cpp  FastaDecoder.cpp  directory.cpp  fasta.cpp  program_option.cpp  protein.cpp
Foundation/Headers/: Directory.h  FastaDecoder.h  directory.h  fasta.h  program_option.h
Foundation/include/: directory.h  fasta.h  program_option.h  protein.h
Rapport/: rapport.tex
Utils/: directory.cpp  fasta.cpp  protein.cpp
Utils/include/: directory.h  protein.h
exemple/codoncount/: test copie.fasta
exemple/codoncount/output/: test copie.txt  test-total.txt
exemple/contigdiff/inputA/: BL4_skesa.fasta  typing_scheme.fasta
exemple/contigdiff/output/: common-in-A.fasta
exemple/findall/: typing_scheme.fasta
exemple/findall/output/: BL4_skesa-result.fasta  output.txt
sources/: CMakeLists.txt  main.cpp
sources/CodonCount/: condo_count.cpp  parser.cpp
sources/CodonCount/include/: condo_count.h  parser.h
sources/ContigDiff/: cent_percent.cpp  contig_diff.cpp  other_percent.cpp  parser.cpp
sources/ContigDiff/include/: cent_percent.h  contig_diff.h  other_percent.h  parser.h  search.hpp
sources/ContigOrdered/: contigOrdered.cpp
sources/ContigOrdered/include/: contigOrdered.hpp
sources/FindAll/: find_all.cpp  nucleic.cpp  protein.cpp
sources/FindAll/include/: find_all.h  find_all.hpp  nucleic.h  nucleic.hpp  protein.h  protein.hpp  search.hpp
sources/GeneMut/: gene_mut.cpp
sources/GeneMut/include/: gene_mut.hpp
sources/Utils/: directory.cpp  fasta.cpp  file.cpp  parser.cpp  protein.cpp
sources/Utils/include/: directory.h  file.h  parser.h  protein.h  sequence.h
